--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -125,7 +125,7 @@ nav {
   }
   .header-name {
     display: block;
-    opacity: 0;
+    /* opacity: 0; */
     transition: all 0.5s cubic-bezier(0.4, 0, 0, 1);
   }
   .sticky-nav-full .header-name {
