feat: hr표시 되도록 수정

--- a/src/styles/notion.css
+++ b/src/styles/notion.css
@@ -89,3 +89,7 @@ pre[class*='language-'] {
 .notion-collection-row {
   @apply hidden;
 }
+
+.notion-hr {
+  border-top: 1px solid rgba(55, 53, 47, 0.16);
+}
