--- a/styles/theme.css
+++ b/styles/theme.css
@@ -1,7 +1,14 @@
-:root {
-  --font-family-redhat: "Red Hat Display", sans-serif; /* Replace with the appropriate font-family */
-  --font-family-notosans: "Noto Sans", sans-serif; /* Replace with the appropriate font-family */
-  --font-family-notocoloremoji: "Noto Color Emoji", sans-serif; /* Replace with the appropriate font-family */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Color+Emoji:wght@400&display=swap');
+
+html,
+body,
+.notion-list,
+.notion-text,
+.notion-h-title,
+.notion-callout-text {
+  font-family: 'Red Hat Display', 'Noto Color Emoji', 'Noto Sans KR', sans-serif;
 }
 
 body {
@@ -10,14 +17,6 @@ body {
   color: var(--gray-12);
   font-weight: 500;
   font-style: normal;
-}
-
-body,
-.notion-list,
-.notion-text,
-.notion-h-title,
-.notion-callout-text {
-  font-family: var(--font-family-redhat), var(--font-family-notosans), var(--font-family-notocoloremoji);
 }
 
 * {
