--- a/styles/theme.css
+++ b/styles/theme.css
@@ -25,14 +25,18 @@ body {
 }
 
 h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0;
   font-weight: inherit;
   font-style: inherit;
+}
+
+h3 {
+  font-size: 1.17em;
 }
 
 a {
