--- a/styles/theme.css
+++ b/styles/theme.css
@@ -73,3 +73,10 @@ hr {
   margin: 0;
   border-top: 1px solid var(--gray-6);
 }
+
+.card{
+  width: 100%;
+  height: 100%;
+  padding: 1rem;
+  border-radius: 1rem;
+}
